# nda

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  Dockerfile  Dockerfile.build  Jenkinsfile  LICENSE.txt  README.md  _compound_assign.hpp  build_command  docker_msan_command  h5.hpp  nda.hpp  requirements.txt  vimsrc
WIP/: after.hpp  (+11 more)
benchmarks/: CMakeLists.txt  PBS  bench_common.hpp  blas.cpp  broadcast_small_inv.cpp  clef_loop.cpp  constr_heap_vs_sso.cpp  copy.cpp  expr_temp.cpp  fill_0.cpp  for_static.cpp  gemm_batch.cpp  iterator_foreach.cpp  loop1d.cpp  loop2d.cpp  loop3d.cpp  plot.py  small_inv.cpp  sso.cpp  view.cpp
benchmarks/compiler_explorer_snippets/: .clang-format  view_and_call.cpp
c++/clef/: CMakeLists.txt  clef.hpp  io.hpp  macros.hpp  sum.hpp
c++/clef/adapters/: math.hpp  vector.hpp
c++/mpi/: CMakeLists.txt  mpi.hpp  string.hpp  vector.hpp
c++/nda/: CMakeLists.txt  TODO  _impl_basic_array_view_common.hpp  _regular_view_common.hpp  accessors.hpp  algorithms.hpp  arithmetic.hpp  array.hpp  array_adapter.hpp  array_view.hpp  assignment.hpp  backward.hpp  basic_array.hpp  basic_array_view.hpp  basic_functions.hpp  basic_functions.hxx  blas.hpp  clef.hpp  concepts.hpp  declarations.hpp  device.hpp  exceptions.hpp  fold.hpp  functions.hpp  grid_iterator.hpp  group_indices.hpp  gtest_tools.hpp  h5.cpp  h5.hpp  iterator_adapter.hpp  iterators.hpp  lapack.hpp  layout_transforms.hpp  linalg.hpp  macros.hpp  map.hpp  mapped_functions.hpp  mapped_functions.hxx  math_functions.hpp  matmul.hpp  (+18 more)
c++/nda/WIP/: _nda_impl.hpp  array.hpp  assignment2.hpp  map.hpp  permutation.hpp  view.hpp
c++/nda/backward/: extent_access.hxx
c++/nda/blas/: dot.hpp  gemm.hpp  gemm_batch.hpp  gemv.hpp  ger.hpp  qcache.hpp  scal.hpp  tools.hpp
c++/nda/blas_lapack/: dot.hpp  gemm.hpp  qcache.hpp  stev.hpp  tools.hpp
c++/nda/clef/: clef.hpp  clef_ops.hxx  io.hpp  literals.hpp  macros.hpp  sum.hpp
c++/nda/h5/: simple_read_write.cpp  simple_read_write.hpp
c++/nda/indexmap/: bound_check_worker.hpp  for_each.hpp  idx_map.hpp  idx_map_dynamic.hpp  idx_map_iterator.hpp  io.hpp  permutation.hpp  range.hpp  slice_static.hpp  slice_worker1.hpp
c++/nda/indexmaps/: bound_check_worker.hpp  god_for  idx_map.hpp  range.hpp
c++/nda/lapack/: gels.hpp  gelss.hpp  gelss_worker.hpp  geqp3.hpp  gesvd.hpp  getrf.hpp  getri.hpp  getrs.hpp  gtsv.hpp  orgqr.hpp  stev.hpp  ungqr.hpp
c++/nda/lapack_interface/: lapack_cxx_interface.hpp
c++/nda/layout/: .idx_map.hpp.swm  bound_check_worker.hpp  ellipsis_position.hpp  for_each.hpp  idx_map.hpp  idx_map_iterator.hpp  io.hpp  permutation.hpp  policies.hpp  range.hpp  rect_str.hpp  slice_static.hpp
c++/nda/linalg/: cross_product.hpp  det_and_inverse.hpp  dot.hpp  eigenelements.hpp  gelss_worker.hpp  matmul.hpp  norm.hpp
c++/nda/mem/: address_space.hpp  allocators.hpp  device.hpp  fill.hpp  handle.hpp  malloc.hpp  memcpy.hpp  memset.hpp  policies.hpp  prefetch.hpp
c++/nda/mpi/: gather.hpp  reduce.hpp  scatter.hpp
c++/nda/std_addons/: array.hpp  complex.hpp
c++/nda/stdutil/: array.hpp  complex.hpp  concepts.hpp
c++/nda/storage/: allocators.hpp  blk.hpp  handle.cpp  handle.hpp  memcopy.hpp  policies.hpp  rtable.cpp  rtable.hpp
h5/: CMakeLists.txt  ChangeLog.md  array_interface.hpp  file.cpp  file.hpp  group.cpp  h5object.cpp  h5object.hpp  python.cpp  python.hpp  scalar.hpp  scheme.hpp
h5/stl/: map.hpp  optional.hpp  pair.hpp  string.hpp  tuple.hpp  variant.hpp  vector.cpp  vector.hpp
nda/: CMakeLists.txt  _regular_view_common.hpp  arithmetic.hpp  array.hpp  array_view.hpp  assignment.hpp  basic_functions.hxx  exceptions.hpp  functions.hpp  mapped_functions.hxx  mapped_functions.vim  matrix.hxx  matrix.vim  traits.hpp  vimexpand.vim
nda/WIP/: _nda_impl.hpp  array.hpp
nda/h5/: simple_read_write.hpp
nda/indexmap/: bound_check_worker.hpp  idx_map.hpp  io.hpp  permutation.hpp  range.hpp  slice_static.hpp
nda/indexmaps/: for_each.hpp  idx_map.hpp  idx_map_iterator.hpp  io.hpp  layout.hpp  range.hpp  slice_worker.hpp
nda/storage/: python.hpp
nda/storages/: handle.hpp  python.hpp  rtable.hpp
python/: CMakeLists.txt
python/app4triqs/: CMakeLists.txt  app4triqs_module_desc.py  toto_module_desc.py  version.py.in
python/h5/: CMakeLists.txt  __init__.py  _h5py.cpp  h5py_io.cpp  h5py_io.hpp  hdf_archive.py  hdf_archive_basic_layer_h5py.py  hdf_archive_schemes.py  version.py.in
python/nda/: CMakeLists.txt  __init__.py  _h5py.cpp  converter_test.cpp  make_py_capsule.hpp  nda_module_desc.py  nda_py_interface.cpp  nda_py_interface.hpp  python.cpp  python.hpp
python/nda_py/: CMakeLists.txt  __init__.py  c2py_converters.hpp  cpp2py_converters.hpp  make_py_capsule.hpp  nda_py.cpp  nda_py.hpp  numpy_proxy.cpp  numpy_proxy.hpp  numpy_proxy_nda.hpp  pybind11_converters.hpp  version.py.in
share/: CMakeLists.txt  app4triqs.modulefile.in  nda.modulefile.in  ndavars.sh.in
share/cmake/: CMakeLists.txt  app4triqs-config.cmake.in  nda-config-version.cmake.in  nda-config.cmake.in
test/c++/: CMakeLists.txt  basic.cpp  expr_template.cpp  idx_map.cpp  issue34.cpp  nda_algorithms.cpp  nda_alloc_poison.cpp  nda_arange.cpp  nda_arithmetic.cpp  nda_array_adapter.cpp  nda_array_of_non_pod.cpp  nda_basic.cpp  nda_blas.cpp  nda_bound_check.cpp  nda_concepts.cpp  nda_cublas.cpp  nda_cuda.cpp  nda_culapack.cpp  nda_custom_alloc.cpp  nda_cutensor.cpp  nda_ellipsis.cpp  nda_expr_template.cpp  nda_functions.cpp  nda_h5.cpp  nda_h5_slice.cpp  nda_idx_map.cpp  nda_iterators.cpp  nda_lapack.cpp  nda_layoutinfo.cpp  nda_lazy.cpp  nda_linear_algebra.cpp  nda_map.cpp  nda_matrix.cpp  nda_mix_various_layout.cpp  nda_mpi.cpp  nda_mpi_shared.cpp  nda_norm.cpp  nda_ones.cpp  nda_permutation.cpp  nda_qcache.cpp  (+24 more)
test/python/: Basic.py  CMakeLists.txt  Toto.py  a.cpp  a.hpp  chain.py  copy_move_stat.cxx  copy_move_stat.hpp  copy_move_stat.yml  copy_move_stat_desc.py  copy_move_stat_test.py  nda_py_a_desc.py  nda_test_converters.py  pybind_a.cpp  pybind_test.cpp  wrap_basic.cxx  wrap_basic.hpp  wrap_basic.yml  wrap_basic_desc.py  wrap_basic_test.py
(+213 files in other folders)
